# NothingMoves

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
asset_bases/: arrow.xcf  circle_arrow.xcf  circle_dash_arrow.xcf  dash_arrow.xcf
assets/scenes/ui/: maze_controls.scn.ron
src/: assets.rs  async_promoter.rs  level.rs  main.rs  maze.rs  menu.rs
src/level/: bundle.rs  input.rs  loader.rs  maze_level.rs  maze_renderer.rs  maze_ui_renderer.rs  mod.rs  plugin.rs  renderer.rs
src/ui/: button.rs
wasm/: index.html
