[package]
edition = "2021"
license = "MIT"
name = "nothing-moves"
version = "0.1.0"

[dependencies]
bevy = "0.6"
bevy_tweening = "0.3.2"
rand = "0.8"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
