[package]
edition = "2021"
license = "MIT"
name = "nothing-moves"
version = "0.1.0"

[dependencies]
bevy = "*"
rand = "*"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
